Increase minimum dropdown width to fix okButton wrap-over in FF

--- a/app/styles/contentscript.css
+++ b/app/styles/contentscript.css
@@ -16,7 +16,7 @@
   clear: both;
   background-color: white;
   cursor: default;
-  min-width: 160px;
+  min-width: 256px;
   padding: 5px 5px;
   overflow: auto;
   font-size: 12px;
